--- a/trello-integration.yml
+++ b/trello-integration.yml
@@ -20,8 +20,8 @@ jobs:
         if: steps.extract.outputs.card_id != ''
         run: |
           curl -X POST "https://api.trello.com/1/cards/${{ steps.extract.outputs.card_id }}/actions/comments" \
-            -d "key=${{ secrets.TRELLOKEY }}" \
-            -d "token=${{ secrets.TRELLO_TOKEN }}" \
+            -d "key=${{ secrets.TRELLOKEYS }}" \
+            -d "token=${{ secrets.TRELLOSECRET }}" \
             -d "text=Commit poussé par ${{ github.actor }}%0A ${{ github.event.head_commit.message }}%0A${{ github.event.head_commit.url }}"
       
       - name: Move card to EN REVUE (main branch only)
@@ -40,4 +40,5 @@ jobs:
           slack-message: "La carte Trello <https://trello.com/c/${{ steps.extract.outputs.card_id }}|EN REVUE> vient d'arriver en revue !"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+
 
