--- a/trello-integration.yml
+++ b/trello-integration.yml
@@ -28,9 +28,9 @@ jobs:
         if: github.ref == 'refs/heads/main' && steps.extract.outputs.card_id != ''
         run: |
           curl -X PUT "https://api.trello.com/1/cards/${{ steps.extract.outputs.card_id }}" \
-            -d "key=${{ secrets.TRELLO_API_KEY }}" \
-            -d "token=${{ secrets.TRELLO_TOKEN }}" \
-            -d "idList=${{ secrets.TRELLO_LIST_EN_REVUE }}"
+            -d "key=${{ secrets.TRELLOKEYS }}" \
+            -d "token=${{ secrets.TRELLOSECRET }}" \
+            -d "idList=${{ secrets.TRELLOGITB }}"
       
       - name: Send Slack notification
         if: github.ref == 'refs/heads/main' && steps.extract.outputs.card_id != ''
@@ -39,6 +39,7 @@ jobs:
           channel-id: C0A1JAS4KRP
           slack-message: "La carte Trello <https://trello.com/c/${{ steps.extract.outputs.card_id }}|EN REVUE> vient d'arriver en revue !"
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACKB }}
+
 
 
